@@ -1,6 +1,7 @@
 //////////////////////////////////////////////////////////////////////////
 //
 //  Copyright (c) 2007-2010, Image Engine Design Inc. All rights reserved.
+//  Copyright (c) 2012, John Haddon. All rights reserved.
 //
 //  Redistribution and use in source and binary forms, with or without
 //  modification, are permitted provided that the following conditions are
@@ -67,7 +68,15 @@ PrimitiveVariable::PrimitiveVariable( const PrimitiveVariable &other, bool deepC
 
 bool PrimitiveVariable::operator==( const PrimitiveVariable &other ) const
 {
-	return interpolation==other.interpolation && data->isEqualTo( other.data );
+	if( interpolation != other.interpolation )
+	{
+		return false;
+	}
+	if( data && other.data )
+	{
+		return data->isEqualTo( other.data );
+	}
+	return !data && !other.data;
 }
 
 bool PrimitiveVariable::operator!=( const PrimitiveVariable &other ) const
